agregado de fotos

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -1,7 +1,8 @@
 $fondo: #FAEDCD;
 $fondo2: #e4b78b;
-$contraste: #ffa500;
 $fondo3: #ff3333de;
+$contraste: #ffa500;
+$tarjeta: #f5deb3;
 $letra: #ffffff;
 $links: #000000;
 $footer: #3f3c3c;
