--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -61,9 +61,11 @@ body main .pedido #objetos {
   overflow-y: scroll;
 }
 body main .pedido #objetos .productos {
-  max-width: 200px;
+  width: 300px;
   border: 2px solid black;
   border-radius: 10%;
+  font-size: 1rem;
+  background-color: wheat;
   margin: 1%;
   padding: 1%;
 }
