--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -70,9 +70,11 @@ body {
                 height: 700px;
                 overflow-y: scroll;
                 .productos{
-                    max-width: 200px;
+                    width: 300px;
                     border: 2px solid black;
                     border-radius: 10%;
+                    font-size: 1rem;
+                    background-color: $tarjeta;
                     @include espaciado (1%, 1%);
                     img{
                         width: 200px;
