--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -60,6 +60,7 @@ body {
 
             h1 {
                 text-align: center;
+                text-decoration: underline;
             }
 
             #store {
@@ -105,6 +106,9 @@ body {
                     overflow-y: scroll;
 
                     .productos {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
                         width: 300px;
                         border: 2px solid black;
                         border-radius: 10%;
@@ -116,6 +120,10 @@ body {
                             width: 200px;
                             height: 110px;
                             @include espaciado (1%, 0);
+                        }
+                        button{
+                            background-color: $fondo2;
+                            font-weight: bold;
                         }
                     }
                 }
@@ -131,21 +139,36 @@ body {
 
                     #objetosCarrito {
                         display: flex;
+                        align-content: flex-start;
                         height: 400px;
                         overflow-y: scroll;
 
                         .productoEnCarrito {
-                            display: flex;
-                            flex-wrap: wrap;
+                            display: grid; 
+                            grid-auto-columns: 1fr; 
+                            grid-template-columns: 3fr 2fr 2fr 2fr 0.1fr; 
+                            grid-template-rows: 1fr; 
+                            gap: 0px 0px; 
+                            grid-template-areas: 
+                            ". . . . . "; 
                             height: 3rem;
                             width: 100%;
                             border: 2px solid black;
-                            font-size: 1rem;
+                            font-size: 1.5rem;
                             background-color: $tarjeta;
+                            button{
+                                border: none;
+                                background-color: transparent;
+                                height: fit-content;
+                                width: fit-content;
+                            }
                         }
                     }
                 }
-                
+                #finalizarCompra{
+                    background-color: $fondo;
+                    font-weight: bold
+                }
             }
         }
 
