--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -94,6 +94,7 @@ body main .pedido #store #objetos .productos {
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
+  height: 400px;
   border: 2px solid black;
   border-radius: 10%;
   font-size: 1rem;
@@ -180,12 +181,12 @@ body main .ubicacion .mapa {
   padding: 2%;
 }
 body footer {
-  height: 271px;
+  height: 300px;
   background-color: #3f3c3c;
   color: #ffffff;
 }
 body footer .logo {
-  height: 150px;
+  height: 50%;
 }
 body footer .nombre {
   font-family: "Norican", cursive;
