--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -110,6 +110,7 @@ body {
                         flex-direction: column;
                         justify-content: space-between;
                         width: 300px;
+                        height: 400px;
                         border: 2px solid black;
                         border-radius: 10%;
                         font-size: 1rem;
@@ -213,12 +214,12 @@ body {
     }
 
     footer {
-        height: 271px;
+        height: 300px;
         background-color: $footer;
         color: $letra;
 
         .logo {
-            height: 150px;
+            height: 50%;
         }
 
         .nombre {
