--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -147,11 +147,11 @@ body {
                         .productoEnCarrito {
                             display: grid; 
                             grid-auto-columns: 1fr; 
-                            grid-template-columns: 3fr 2fr 2fr 2fr 0.1fr; 
+                            grid-template-columns: 3fr 2fr 0.1fr 0.5fr 0.1fr 2fr 0.1fr; 
                             grid-template-rows: 1fr; 
-                            gap: 0px 0px; 
+                            gap: 0px 30px; 
                             grid-template-areas: 
-                            ". . . . . "; 
+                            ". . . . . . ."; 
                             height: 3rem;
                             width: 100%;
                             border: 2px solid black;
@@ -162,6 +162,11 @@ body {
                                 background-color: transparent;
                                 height: fit-content;
                                 width: fit-content;
+                                font-weight: bold;
+                            }
+                            .unidades{
+                                border: 1px solid black;
+                                width: 50px;
                             }
                         }
                     }
