--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -232,5 +232,8 @@ body {
             font-weight: bold;
             font-size: 3rem;
         }
+        .redes{
+            width: 100%;
+        }
     }
 }
