--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -11,6 +11,9 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
 }
+body .tostada {
+  background: rgba(255, 51, 51, 0.8705882353);
+}
 body header {
   border-bottom: 2px solid black;
 }
