--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -188,6 +188,20 @@ body main .ubicacion .mapa {
   height: 500px;
   padding: 2%;
 }
+body main .nosotros {
+  margin: 1%;
+  padding: 2%;
+  background-color: #e4b78b;
+}
+body main .nosotros .descripcion {
+  margin: 1%;
+  padding: 1%;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+}
+body main .nosotros img {
+  width: 40%;
+}
 body footer {
   height: 300px;
   background-color: #3f3c3c;
