--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -222,6 +222,18 @@ body {
             }
 
         }
+        .nosotros{
+            @include espaciado (1%, 2%);
+            background-color: $fondo2;
+            .descripcion{
+                @include espaciado (1%, 1%);
+                border-bottom: 1px solid black;
+                border-top: 1px solid black;
+            }
+            img{
+                width: 40%;
+            }
+        }
     }
 
     footer {
