--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -7,8 +7,6 @@
     box-sizing: border-box;
 }
 
-
-
 body {
     line-height: 1.6;
     background-color: $fondo;
@@ -55,6 +53,7 @@ body {
                 background-color: $fondo3;
 
                 .vision {
+                    @include espaciado (5%, 5%);
                     color: $letra;
                 }
             }
@@ -80,24 +79,27 @@ body {
                     background-color: $fondo;
 
                     .titulo {
-                        font-size: 1.5rem;
                         @include espaciado (3%, 0);
+                        font-size: 1rem;
+                        font-weight: bold;
+                        background-color: $fondo3;
                         text-align: center;
-                        text-decoration: underline;
+                        text-decoration: underline double;
+                    }
 
-                        .botonCarrito {
-                            width: 100%;
-                            height: 6%;
-                            font-size: 1rem;
-                            border: none;
-                            text-decoration: underline;
-                            background-color: transparent;
-                        }
+                    .botonCarrito {
+                        @include espaciado (3%, 0);
+                        width: 90%;
+                        height: 5%;
+                        font-size: 1rem;
+                        border: none;
+                        text-decoration: underline;
+                        background-color: $fondo;
                     }
 
                     .botonFiltro {
                         width: 100%;
-                        height: 6%;
+                        height: 5%;
                         font-size: 1rem;
                         border: none;
                         background-color: transparent;
@@ -112,25 +114,30 @@ body {
                     overflow-y: scroll;
 
                     .productos {
+                        @include espaciado (1%, 1%);
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
-                        width: 300px;
+                        align-items: center;
+                        text-align: center;
+                        width: 30%;
+                        min-width: 250px;
                         height: 400px;
                         border: 2px solid black;
                         border-radius: 10%;
                         font-size: 1rem;
                         background-color: $tarjeta;
-                        @include espaciado (1%, 1%);
 
                         img {
+                            @include espaciado (1%, 0);
                             width: 200px;
                             height: 110px;
-                            @include espaciado (1%, 0);
                         }
+
                         button{
                             background-color: $fondo2;
                             font-weight: bold;
+                            width: fit-content;
                         }
                     }
                 }
@@ -179,7 +186,8 @@ body {
                 }
                 #finalizarCompra{
                     background-color: $fondo;
-                    font-weight: bold
+                    font-weight: bold;
+                    width: 100%;
                 }
             }
         }
@@ -196,6 +204,10 @@ body {
             .accesos {
                 border: 1px solid;
                 border-width: 1px 0;
+
+                img{
+                    width: 100%;
+                }
 
                 .link {
                     text-decoration: none;
@@ -242,16 +254,24 @@ body {
         color: $letra;
 
         .logo {
-            height: 50%;
+            width: 20%;
         }
 
         .nombre {
             font-family: "Norican", cursive;
             font-weight: bold;
-            font-size: 3rem;
+            font-size: 2rem;
+        }
+        .proximamente{
+            font-size: 1.5rem;
         }
         .redes{
-            width: 100%;
+            width: 75%;
+        }
+        a{
+            width: fit-content;
         }
     }
 }
+
+@import "media";
